Fix: remove dark mode effect on the application

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  color-scheme: light dark;
+  color-scheme: light;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
